--- a/assets/css/auth_style.css
+++ b/assets/css/auth_style.css
@@ -9,3 +9,11 @@
     background-size: cover;
     background-position: center;
 }
+
+body {
+    background-color: #EC9606;
+}
+.card {
+    background: rgb(235,235,235);
+    background: linear-gradient(6deg, rgba(235,235,235,1) 0%, rgba(255,255,255,1) 100%);
+}
