--- a/assets/css/admin_style.css
+++ b/assets/css/admin_style.css
@@ -1,16 +1,56 @@
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Inter', sans-serif;
+}
+.brand-logo {
+    width: 50px;
+    filter: brightness(10);
 }
 #logout,
 .pointer {
     cursor: pointer;
 }
-  
+.form-text.text-danger p {
+    margin-bottom: 0;
+}
 /* for main section */
 .active-cont {
     margin-left: 250px;
 }
 
+.btn-mapel {
+    background: linear-gradient(141.16deg, #FFAD32 20.65%, #F57B36 99.44%);
+    border-color: #F57B36;
+}
+.btn-mapel:hover,
+.btn-mapel:active,
+.btn-mapel:focus {
+    background: linear-gradient(141.16deg, #fc9e11 20.65%, #f16a1b 99.44%);
+    border-color: #f16a1b;
+}
+
+.btn-batal {
+    background: transparent;
+    color: #F57B36;
+    border-color: #F57B36;
+}
+.btn-batal:hover,
+.btn-batal:active,
+.btn-batal:focus {
+    background: transparent;
+    color: #f16a1b;
+    border-color: #f16a1b;
+}
+
+.excel {
+    background-color: rgba(25, 135, 84, 1);
+    border-color: rgba(25, 135, 84, 1);
+}
+.excel:hover,
+.excel:active,
+.excel:focus {
+    background-color: rgba(21, 115, 71, 1);
+    border-color: rgba(21, 115, 71, 1);
+}
 #menu-btn {
     background-color: #100901;
     color: #fff;
@@ -26,9 +66,6 @@
 .text-mapel-mentor,
 .text-marketing {
     font-size: 0.9rem;
-}
-.nav_logo-name {
-    font-family: 'Viga', sans-serif;
 }
 .table-jadwal tr td,
 .table-jadwal tr th,
@@ -56,12 +93,12 @@
 }
 
 .nav_list::-webkit-scrollbar-track {
-    background: rgba(241, 241, 241, 0.5);
+    background: rgba(241, 241, 241, 0.3);
     border-radius: 10px;
 }
 
 .nav_list::-webkit-scrollbar-thumb {
-    background: #888;
+    background: rgba(253, 253, 253, 0.4);
     border-radius: 10px;
 }
 
@@ -75,18 +112,29 @@
     background-color: #f0f2f5!important;
 }
 .header-hari {
-    background-image: linear-gradient(195deg,#49a3f1,#1a73e8);
-    box-shadow: 0 4px 20px 0 rgba(0,0,0,.14),0 7px 10px -5px rgba(0,188,212,.4)!important;
+    background: linear-gradient(141.16deg, #FFAD32 20.65%, #F57B36 99.44%);
+    box-shadow: 0 4px 20px 0 rgba(0,0,0,.14),0 7px 10px -5px rgb(245, 123, 54, .4)!important;
     margin-top: -43px;
 }
+.header-card-dash {
+    background: linear-gradient(141.16deg, #FFAD32 20.65%, #F57B36 99.44%);
+    box-shadow: 0 4px 20px 0 rgba(0,0,0,.14),0 7px 10px -5px rgb(245, 123, 54, .4)!important;
+}
+.mentor .form-check {
+    width: 20%;
+}
 
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");:root{--header-height: 3rem;--nav-width: 68px;--first-color: #4723D9;--first-color-light: #AFA5D9;--white-color: #F7F6FB;--body-font: 'Nunito', sans-serif;--normal-font-size: 1rem;--z-fixed: 100}*,::before,::after{box-sizing: border-box}body{position: relative;margin: var(--header-height) 0 0 0;padding: 0 1rem;font-family: var(--body-font);font-size: var(--normal-font-size);transition: .5s}a{text-decoration: none}.header{width: 100%;height: var(--header-height);position: fixed;top: 0;left: 0;display: flex;align-items: center;justify-content: space-between;padding: 0 1rem;background-color: var(--white-color);z-index: var(--z-fixed);transition: .5s}.header_toggle{color: var(--first-color);font-size: 1.5rem;cursor: pointer}.header_img{width: 35px;height: 35px;display: flex;justify-content: center;border-radius: 50%;overflow: hidden}.header_img img{width: 40px}.l-navbar{position: fixed;top: 0;left: -30%;width: var(--nav-width);height: 100vh;background-color: var(--first-color);padding: .5rem 1rem 0 0;transition: .5s;z-index: var(--z-fixed)}.nav{height: 100%;display: flex;flex-direction: column;justify-content: space-between;overflow: hidden}.nav_logo, .nav_link{display: grid;grid-template-columns: max-content max-content;align-items: center;column-gap: 1rem;padding: .5rem 0 .5rem 1.5rem}.nav_logo{margin-bottom: 2rem}.nav_logo-icon{font-size: 1.25rem;color: var(--white-color)}.nav_logo-name{color: var(--white-color);font-weight: 700}.nav_link{position: relative;color: var(--first-color-light);margin-bottom: 1rem;transition: .3s}.nav_link:hover{color: var(--white-color)}.nav_icon{font-size: 1.25rem}.shows{left: 0}.body-pd{padding-left: calc(var(--nav-width) + 1rem)}.active{color: var(--white-color)}.active::before{content: '';position: absolute;left: 0;width: 2px;height: 32px;background-color: var(--white-color)}
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");:root{--header-height: 3rem;--nav-width: 68px;--first-color: #4723D9;--first-color-light: #AFA5D9;--white-color: #F7F6FB;--body-font: 'Nunito', sans-serif;--normal-font-size: 1rem;--z-fixed: 100}*,::before,::after{box-sizing: border-box}body{position: relative;margin: var(--header-height) 0 0 0;padding: 0 1rem;font-family: var(--body-font);font-size: var(--normal-font-size);transition: .5s}a{text-decoration: none}.header{width: 100%;height: var(--header-height);position: fixed;top: 0;left: 0;display: flex;align-items: center;justify-content: space-between;padding: 0 1rem;background-color: var(--white-color);z-index: var(--z-fixed);transition: .5s}.header_toggle{color: #F57B36;font-size: 1.5rem;cursor: pointer}.header_img{width: 35px;height: 35px;display: flex;justify-content: center;border-radius: 50%;overflow: hidden}.header_img img{width: 40px}.l-navbar{position: fixed;top: 0;left: -30%;width: var(--nav-width);height: 100vh;background: linear-gradient(141.16deg, #FFAD32 20.65%, #F57B36 99.44%);padding: .5rem 1rem 0 0;transition: .5s;z-index: var(--z-fixed)}.nav{height: 100%;display: flex;flex-direction: column;justify-content: space-between;overflow: hidden}.nav_logo, .nav_link{display: grid;grid-template-columns: max-content max-content;align-items: center;column-gap: 1rem;padding: .5rem 0 .5rem 1.5rem}.nav_logo{margin-bottom: 2rem}.nav_logo-icon{font-size: 1.25rem;color: var(--white-color)}.nav_logo-name{color: var(--white-color);font-weight: 700}.nav_link{position: relative;color: rgb(255, 255, 255, 0.6);margin-bottom: 1rem;transition: .3s}.nav_link:hover{color: var(--white-color)}.nav_icon{font-size: 1.25rem}.shows{left: 0}.body-pd{padding-left: calc(var(--nav-width) + 1rem)}.active{color: var(--white-color)}.active::before{content: '';position: absolute;left: 0;width: 2px;height: 32px;background-color: var(--white-color)}
+
 @media screen and (min-width: 768px){
     body{
         margin: calc(var(--header-height) + 1rem) 0 0 0;
         padding-left: calc(var(--nav-width) + 2rem)
     }
     .header{height: calc(var(--header-height) + 1rem);padding: 0 2rem 0 calc(var(--nav-width) + 2rem)}.header_img{width: 40px;height: 40px}.header_img img{width: 45px}.l-navbar{left: 0;padding: 1rem 1rem 0 0}.shows{width: calc(var(--nav-width) + 156px)}.body-pd{padding-left: calc(var(--nav-width) + 188px)}
+    .mentor .form-check {
+        width: 25%;
+    }
 }
 @media screen and (max-width: 529px){
     .shows {
@@ -94,5 +142,8 @@
     }
     .body-pd {
         padding-left: calc(var(--nav-width) + 10.5rem);
+    }
+    .mentor .form-check {
+        width: 50%;
     }
 }
